<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.design.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_old_pic"
        android:name="com.design.fragment.ViewFragment"
        android:label="@string/oldpic"
        tools:layout="@layout/fragment_view" />

    <fragment
        android:id="@+id/navigation_view"
        android:name="com.design.fragment.HomeFragment"
        android:label="@string/view"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.design.fragment.HomeFragment"
        android:label="@string/mine"
        tools:layout="@layout/fragment_home" />
</navigation>
